# pennylane-lightning

./: setup.py
notebooks/: FrisusExperiments.ipynb  Korb_benchmark.ipynb
pennylane_lightning/core/src/simulators/lightning_tensor/: CMakeLists.txt
pennylane_lightning/core/src/utils/: config.h
pennylane_lightning/lightning_qubit/: lightning_qubit.py
pennylane_lightning/lightning_tensor/: _mps.py  _state_tensor.py  _tensor_vector.py  lightning_tensor.py
pennylane_lightning/lightning_tensor/quimb/: _mps.py  _utils.py
tests/lightning_tensor/: test_expval.py  test_lightning_tensor.py  test_quimb_mps.py  test_var.py
